--- a/html/plugins/sharing/templates/groupprojects.html
+++ b/html/plugins/sharing/templates/groupprojects.html
@@ -2,7 +2,7 @@
 
 	<!-- groupprojects TAB -->
 	<div
-		dojoAttachPoint="groupprojectsTab"
+		dojoAttachPoint="mainTab"
 		class="groupprojects"
 		dojoType="dijit.layout.ContentPane"
 		title="Group Projects"
