--- a/html/plugins/sharing/templates/groups.html
+++ b/html/plugins/sharing/templates/groups.html
@@ -2,7 +2,7 @@
 
 	<!-- SOURCES TAB -->
 	<div
-		dojoAttachPoint="groupsTab"
+		dojoAttachPoint="mainTab"
 		class="groups"
 		dojoType="dijit.layout.ContentPane"
 		title="Groups"
