--- a/html/plugins/sharing/templates/groupprojectrow.html
+++ b/html/plugins/sharing/templates/groupprojectrow.html
@@ -1,16 +1,16 @@
-<div dojoAttachPoint="containerNode">
+<div data.dojo.attach.point="containerNode">
     <table width="100%" cellspacing="0px">
         <tr width="100%">
             <td
                 colspan="2"
-                dojoAttachPoint="name"
+                data.dojo.attach.point="name"
                 class="name"
                 >
                 ${name}</td>
         </tr>
         <tr>
             <td colspan="2"
-                dojoAttachPoint="description"
+                data.dojo.attach.point="description"
                 class="description"
                 style="display: none;"
                 >${description}</td>
