--- a/html/plugins/apps/templates/packagerow.html
+++ b/html/plugins/apps/templates/packagerow.html
@@ -105,10 +105,10 @@
 				<table width="99%" style="background-color: #FFF;">
 					<tr>
 						<td
-							dojoAttachPoint="url"
-							class='url'
-							title="url: Web address of website providing further details (e.g., http://mysite.com/packages)"
-						>${url}</td>
+							dojoAttachPoint="website"
+							class='website'
+							title="website: Web address of website providing further details (e.g., http://mysite.com/packages)"
+						>${website}</td>
 					</tr>
 				</table>
 			</td>
