--- a/html/plugins/apps/templates/packages.html
+++ b/html/plugins/apps/templates/packages.html
@@ -182,8 +182,8 @@
 					<td
 						colspan="3"
 						style="display: none;"
-						dojoAttachPoint="urlTitle"
-						title="url: Web address of website providing further details (e.g., http://mysite.com/packages)"
+						dojoAttachPoint="websiteTitle"
+						title="website: Web address of website providing further details (e.g., http://mysite.com/packages)"
 						>URL</td>
 				</tr>
 
@@ -191,13 +191,13 @@
 					<td colspan="3">
 						<textarea
 							spellcheck="false"
-							dojoAttachPoint="url"
-							class="url"
+							dojoAttachPoint="website"
+							class="website"
 							value="URL"
 							style="display: none; width:100%; font-weight: bolder; font-family: Verdana;";
 							cols="40"
 							rows="1"
-							title="url: Web address of website providing further details (e.g., http://mysite.com/packages)"
+							title="website: Web address of website providing further details (e.g., http://mysite.com/packages)"
 						>URL</textarea>
 					</td>
 				</tr>
