--- a/html/plugins/core/css/agua.css
+++ b/html/plugins/core/css/agua.css
@@ -19,6 +19,14 @@
     padding: 0 !important;
 }
 
+/* BOX SHADOW */
+.dijitDialog {
+  border: 1px solid #759dc0;
+  -webkit-box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.25) !important;
+  -moz-box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.25) !important;
+  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.25) !important;
+}
+
 /* HEADINGS */
 h3, h4, h5, h6  {
 	margin-top: 0px !important;
